# ccserver

./: .gitignore  .gitmodules  CMakeLists.txt  README.adoc  README.md
docs/: handler-architecture.drawio  handler-architecture.md
examples/: main.cpp
impl/: ieee802-dot1q-bridge@2023-04-17.sid  ieee802-dot1q-preemption-bridge@2022-08-18.sid  ieee802-dot1q-sched-bridge-impl.c  ieee802-dot1q-sched-bridge-impl.h  ieee802-dot1q-sched-bridge-instance.json  ieee802-dot1q-sched-bridge@2023-03-08.sid  ieee802-dot1q-types@2023-03-16.sid  ietf-interfaces@2018-02-20.sid  sids_ieee802-dot1q-sched-bridge.conf  sids_simple.conf  simple-example-impl.c  simple-example-impl.h  simple-example-instance.json  simple-example.yang  simple-example@2026-06-04.sid
include/: coreconf_handlers.h
src/: coreconf_config.h.in  coreconf_handlers.cpp  main.cpp
